styles.css
/* Colors
    <Color x:Key="Primary">#AB8264</Color>
    <Color x:Key="Secondary">#A1B9C9</Color>
*/

body {
  font-family: "Open Sans", sans-serif;
  line-height: 1.6;
  padding: 0px 50px 0px 50px;
  background-color: #c29a7d;
  color: black;
}

.index-body {
  height: 100vh;
}

h1 {
  font-size: 2em;
  text-align: center;
  font-weight: 400;
}

h2 {
  font-size: 1.5em;
  font-weight: 600;
}

.index-main {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: repeat(3, 1fr);
}

.intro {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}

.features {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}

.get-started {
  grid-column: 1 / 2;
  grid-row: 3 / -1;
}

.screenshot {
  width: clamp(250px, 30vw, 20rem);
  grid-column: 2 / -1;
  grid-row: 1 / -1;
}

.policy-section {
  margin-bottom: 30px;
}

.contact-info {
  font-style: italic;
}

header {
  text-align: center;
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav ul {
  list-style: none;
  padding: 0;
  text-align: center;
  color: #a1b9c9;
}

nav li {
  display: inline-block;
  margin-right: 20px;
  color: #a1b9c9;
}

a {
  text-decoration: none;
  color: white;
}

a:hover,
a:visited:hover {
  color: #a1b9c9;
}

a:visited {
  color: white;
}

main {
  max-width: 800px;
  margin: 0 auto;
}

.intro {
  margin-bottom: 30px;
}

